# EigenmodeVisualization

./: CMakeLists.txt  EmVis.qrc  LICENSE  README.md  bundle_app  readme_compilation.txt
debug_examples/: Makefile  log.txt
debug_examples/debug/: pinvit_it_0_corr_0.vtu  pinvit_it_0_corr_0_ascii.ugxc  pinvit_it_0_corr_0_ascii.vtu  pinvit_it_0_corr_1.vtu  pinvit_it_0_corr_1_ascii.ugxc  pinvit_it_0_corr_1_ascii.vtu  pinvit_it_0_corr_2.vtu  pinvit_it_0_corr_2_ascii.ugxc  pinvit_it_0_corr_2_ascii.vtu  pinvit_it_0_corr_3.vtu  pinvit_it_0_corr_3_ascii.ugxc  pinvit_it_0_corr_3_ascii.vtu  pinvit_it_0_corr_4.vtu  pinvit_it_0_corr_4_ascii.ugxc  pinvit_it_0_corr_4_ascii.vtu  pinvit_it_0_corr_5.vtu  pinvit_it_0_corr_5_ascii.ugxc  pinvit_it_0_corr_5_ascii.vtu  pinvit_it_0_corr_6.vtu  pinvit_it_0_corr_6_ascii.ugxc  pinvit_it_0_corr_6_ascii.vtu  pinvit_it_0_corr_7.vtu  pinvit_it_0_corr_7_ascii.ugxc  pinvit_it_0_corr_7_ascii.vtu  pinvit_it_0_corr_8.vtu  pinvit_it_0_corr_8_ascii.ugxc  pinvit_it_0_corr_8_ascii.vtu  pinvit_it_0_corr_9.vtu  pinvit_it_0_corr_9_ascii.ugxc  pinvit_it_0_corr_9_ascii.vtu  pinvit_it_0_defect_3_ascii.ugxc  pinvit_it_0_defect_8.vtu  pinvit_it_0_defect_9_ascii.vtu  pinvit_it_0_ev_0.vtu  pinvit_it_0_ev_0_ascii.ugxc  pinvit_it_0_ev_0_ascii.vtu  pinvit_it_0_ev_1.vtu  pinvit_it_0_ev_1_ascii.ugxc  pinvit_it_0_ev_1_ascii.vtu  pinvit_it_0_ev_2.vtu  (+484 more)
debug_examples/solutions/: ev_1.vtu  ev_10.vtu  ev_10_ascii.ugxc  ev_10_ascii.vtu  ev_1_ascii.ugxc  ev_1_ascii.vtu  ev_2.vtu  ev_2_ascii.ugxc  ev_2_ascii.vtu  ev_3.vtu  ev_3_ascii.ugxc  ev_3_ascii.vtu  ev_4.vtu  ev_4_ascii.ugxc  ev_4_ascii.vtu  ev_5.vtu  ev_5_ascii.ugxc  ev_5_ascii.vtu  ev_6.vtu  ev_6_ascii.ugxc  ev_6_ascii.vtu  ev_7.vtu  ev_7_ascii.ugxc  ev_7_ascii.vtu  ev_8.vtu  ev_8_ascii.ugxc  ev_8_ascii.vtu  ev_9.vtu  ev_9_ascii.ugxc  ev_9_ascii.vtu
debug_examples/tools/: converter.py  paraview_binary_ascii_converter.py  vtu_ugx_converter
examples/eigenmodes/break_disk/: A.ugx  ev_1.ugxc  ev_2.ugxc  ev_3.ugxc  ev_4.ugxc  ev_5.ugxc  ev_6.ugxc  metadata.txt
examples/eigenmodes/cembalo/: A.ugx  ev_1.ugxc  ev_2.ugxc  ev_3.ugxc  ev_4.ugxc  ev_5.ugxc  ev_6.ugxc  metadata.txt
examples/eigenmodes/tuning_fork/: A.ugx  ev_1.ugxc  ev_2.ugxc  ev_3.ugxc  ev_4.ugxc  ev_5.ugxc  ev_6.ugxc  metadata.txt
examples/pinvit_iterations/: ev_1.vtu  pinvit_it_1_ev_0.vtu  pinvit_it_2_ev_0.vtu  pinvit_it_3_ev_0.vtu  pinvit_it_4_ev_0.vtu  pinvit_it_5_ev_0.vtu  pinvit_it_6_ev_0.vtu
examples/wave_equation/grids/: 1d_grid.ugx
examples/wave_equation/timestep_data/: point_data.txt
src/: app.cpp  app.h  main.cpp  main_window.cpp  main_window.h  main_window_input.cpp  scene_item_model.cpp
src/modules/: mesh_module.cpp  mesh_module.h
src/oscillation/: oscillation.cpp  solution_refinement_tools.cpp
src/scene/: lg_object.cpp  lg_object.h
src/tools/: UG_LogParser.h  camera_tools.cpp  helmholtz_tools.cpp  info_tools.cpp  oscillation_tools.cpp  solution_refinement_tools.cpp  standard_tools.cpp  standard_tools.h  tool_dialog.cpp  tool_dialog.h  tool_manager.cpp  tools_util.h  wave_tools.cpp
src/view3d/: view3d.cpp  view3d.h
src/vtustuff/: ug_bridge_vtu.cpp  vtu_reader.cpp
src/widgets/: property_widget.h
video_converter/: video_converter_mp4.py
